--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">   
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
     <!--Site header -->
-    <header class="page-header portfolio-heder">
+    <header class="page-header">
         <div class="page-header__block container">
             <nav class="page-header__nav">
                 <a href="" class="logo">Web<span class="page-header__logo">Studio</span></a>
@@ -30,24 +30,24 @@
                 </ul>
             </nav>
 
-                <ul class="auth list">
-                    <li class="auth__item">
-                        <a href="mailto:info@devstudio.com" class="auth__link">
-                            <svg class="auth__icon" width="16" height="12">
-                                <use href="./images/icons.svg#icon-envelope"></use>
-                            </svg>
-                            info@devstudio.com
-                        </a>
-                    </li>
-                    <li class="auth__item">
-                        <a href="tel:+380961111111" class="auth__link">
-                            <svg class="auth__icon" width="10" height="16">
-                                <use href="./images/icons.svg#icon-smartphone"></use>
-                            </svg>
-                            +38 096 111 11 11
-                        </a>
-                    </li>
-                </ul>
+            <ul class="auth list">
+                <li class="auth__item">
+                    <a href="mailto:info@devstudio.com" class="auth__link">
+                        <svg class="auth__icon" width="16" height="12">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>
+                        info@devstudio.com
+                    </a>
+                </li>
+                <li class="auth__item">
+                    <a href="tel:+380961111111" class="auth__link">
+                        <svg class="auth__icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
+                </li>
+            </ul>
                 
         </div>
     </header> 
@@ -419,7 +419,7 @@
 
                 <form class="footer__form">
                     <div class="footer__email">
-                        <input type="email" name="mail" placeholder="E-mail">
+                        <input class="footer__input" type="email" name="mail" placeholder="E-mail">
                     </div>
                     
                     <button class="button footer__button" type="submit">Подписаться
