--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <header class="page-header page-header--line">
         <div class="page-header__block container">
             <nav class="page-header__nav">
-                <a href="" class="logo">Web<span class="page-header--logo">Studio</span></a>
+                <a href="" class="logo">Web<span class="page-header__logo">Studio</span></a>
 
                 <ul class="site-nav list">
                     <li class="site-nav__item">
