добавляет правки ментора

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!--Site header -->
-    <header class="page-header page-header--line">
+    <header class="page-header">
         <div class="page-header__block container">
             <nav class="page-header__nav">
                 <a href="" class="logo">Web<span class="page-header__logo">Studio</span></a>
